tests/errors/vec_push_immutable.milo
// @error: cannot push to immutable Vec

fn main() -> i32 {
    let v: Vec<i32> = Vec::new()
    v.push(10)
    return 0
}
